--- a/producto/templates/paginas/nosotros.html
+++ b/producto/templates/paginas/nosotros.html
@@ -4,7 +4,7 @@
 
 {% block contenido %}
 <div class="alert alert-primary" role="alert">
-  <strong>Check it out!</strong>
+  <strong>BIENVENIDOS...</strong>
 </div>
 
 {% endblock %}
