--- a/producto/templates/productos/form.html
+++ b/producto/templates/productos/form.html
@@ -19,6 +19,6 @@
     <div class= "col-12 help-text">{{campo.errors}}</div>
       
     {% endfor %}
-    <input type="submit" value="guardar" name="" id="" class="btn btn-dark">
+    <input type="submit" value="Guardar Producto" name="" id="" class="btn-danger">
     
 </form>
