--- a/producto/templates/base.html
+++ b/producto/templates/base.html
@@ -17,6 +17,7 @@
       <nav class="navbar navbar-expand navbar-light bg-light">
           <div class="nav navbar-nav">
               <a class="nav-item nav-link active" href="#">Inicio <span class="visually-hidden">(current)</span></a>
+              <a class="nav-item nav-link" href="{% url 'inicio' %}">Inicio</a>
               <a class="nav-item nav-link" href="{% url 'nosotros' %}">Nosotros</a>
               <a class="nav-item nav-link" href="{% url 'productos' %}">Productos</a>
           </div>
