--- a/producto/templates/paginas/inicio.html
+++ b/producto/templates/paginas/inicio.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block titulo %}Nosotros{% endblock %}
+{% block titulo %}Inicio{% endblock %}
 
 {% block contenido %}
 <div class="alert-heading" role="alert">
